--- a/DailyJournal/app/src/main/res/menu/menu_items.xml
+++ b/DailyJournal/app/src/main/res/menu/menu_items.xml
@@ -1,7 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:id="@+id/settings"
-        android:title="Settings"/>
+    <item android:id="@+id/view_entries_activity"
+        android:title="Home"/>
+    <item android:id="@+id/new_entry_activity"
+        android:title="New Entry"/>
+    <item android:id="@+id/search_friends_activity"
+        android:title="Search"/>
+    <item android:id="@+id/view_friends_activity"
+        android:title="View Friends"/>
+    <item android:id="@+id/friend_requests_activity"
+        android:title="View Friend Requests"/>
     <item android:id="@+id/sign_out"
         android:title="Sign Out"/>
 </menu>
