--- a/DailyJournal/app/src/main/res/layout/activity_main.xml
+++ b/DailyJournal/app/src/main/res/layout/activity_main.xml
@@ -3,19 +3,17 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
+    android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="io.github.rahulhp.dailyjournal.MainActivity">
 
-    <Button
+    <!--<Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="New Entry"
         android:id="@+id/new_entry"
         android:onClick="newEntry"
-        android:layout_centerHorizontal="true" />
+        android:layout_centerHorizontal="true" /> -->
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/entryRecyclerView"
@@ -29,18 +27,27 @@
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="Empty_List"
         android:id="@+id/empty_list_textview"
-        android:layout_below="@+id/new_entry"
+
         android:visibility="gone"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="49dp" />
 
     <ProgressBar
-        style="?android:attr/progressBarStyleLarge"
+
+        style="@style/Widget.AppCompat.ProgressBar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/progressBar"
         android:layout_centerVertical="true"
         android:layout_centerHorizontal="true"/>
 
-
+    <android.support.design.widget.FloatingActionButton
+        android:layout_width="56dp"
+        android:layout_height="56dp"
+        android:onClick="newEntry"
+        android:id="@+id/new_entry"
+        android:padding="@dimen/fab_margin"
+        android:src="@drawable/ic_create_black_24dp"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentEnd="true" />
 </RelativeLayout>
