--- a/DailyJournal/app/src/main/res/layout/activity_new_entry.xml
+++ b/DailyJournal/app/src/main/res/layout/activity_new_entry.xml
@@ -3,22 +3,28 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:id="@+id/why"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context=".NewEntryActivity">
+    <android.support.design.widget.TextInputLayout
+        android:layout_width="match_parent"
+        app:counterEnabled="true"
+        app:counterMaxLength="20"
 
-    <EditText
-        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:inputType="textMultiLine"
-        android:ems="10"
-        android:lines="8"
-        android:minLines="6"
-        android:id="@+id/new_entry_textbox"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true" />
+        android:id="@+id/view">
+
+        <android.support.design.widget.TextInputEditText
+            android:layout_width="match_parent"
+            android:maxLength="20"
+            android:id="@+id/new_entry_textbox"
+            android:layout_height="wrap_content"
+            android:hint="What did you do today?"/>
+    </android.support.design.widget.TextInputLayout>
 
     <Button
         android:layout_width="wrap_content"
@@ -26,27 +32,34 @@
         android:text="Save Entry"
         android:id="@+id/save_entry_button"
         android:onClick="saveEntry"
-        android:layout_centerVertical="true"
-        android:layout_centerHorizontal="true" />
+        style="@style/Widget.AppCompat.Button.Colored"
+        android:layout_below="@+id/view"
+        android:layout_alignParentEnd="true" />
+
+
+    <Switch
+        style="@style/Base.Widget.AppCompat.CompoundButton.Switch"
+        android:switchMinWidth="60dp"
+        android:thumbTextPadding="5dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/privacy_switch"
+        android:checked="false"
+        android:layout_alignBaseline="@+id/shared_boolean_text"
+        android:layout_alignBottom="@+id/shared_boolean_text"
+        android:layout_toEndOf="@+id/shared_boolean_text"
+        android:layout_marginStart="40dp" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text=""
-        android:id="@+id/charCount"
-        android:layout_above="@+id/save_entry_button"
-        android:layout_centerHorizontal="true" />
-
-    <Switch
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text=""
-        android:id="@+id/privacy_switch"
-        android:showText="true"
-        android:textOn="Private"
-        android:textOff="Public"
-        android:layout_below="@+id/save_entry_button"
-        android:layout_centerHorizontal="true" />
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:text="P"
+        android:id="@+id/shared_boolean_text"
+        android:layout_marginStart="30dp"
+        android:layout_alignBaseline="@+id/save_entry_button"
+        android:layout_alignBottom="@+id/save_entry_button"
+        android:layout_alignParentStart="true" />
 
 
 </RelativeLayout>
