--- a/DailyJournal/app/src/main/res/layout/journal_entry.xml
+++ b/DailyJournal/app/src/main/res/layout/journal_entry.xml
@@ -1,9 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="76dp"
+    android:paddingEnd="16dp"
+    android:paddingStart="16dp">
 <TextView
+        android:textSize="13sp"
+        android:textStyle="bold"
+        android:layout_width="match_parent"
+        android:id="@+id/journal_entry_date"
+        android:layout_height="wrap_content" />
+<TextView
+    android:textSize="13sp"
+    android:maxLines="2"
     android:layout_width="match_parent"
     android:id="@+id/journal_entry_text"
     android:layout_height="wrap_content" />
+
 </LinearLayout>
