--- a/DailyJournal/app/src/main/res/values/styles.xml
+++ b/DailyJournal/app/src/main/res/values/styles.xml
@@ -6,6 +6,7 @@
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
+        <item name="textColorError">@color/design_textinput_error_color_light</item>
     </style>
 
     <style name="AppTheme.NoActionBar">
