--- a/DailyJournal/app/src/main/res/layout/activity_new_entry.xml
+++ b/DailyJournal/app/src/main/res/layout/activity_new_entry.xml
@@ -1,20 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<GridLayout android:layout_height="match_parent"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:id="@+id/why"
+    android:rowCount="2"
+    android:columnCount="3"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context=".NewEntryActivity">
+    tools:context=".NewEntryActivity"
+    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:android="http://schemas.android.com/apk/res/android">
     <android.support.design.widget.TextInputLayout
         android:layout_width="match_parent"
         app:counterEnabled="true"
         app:counterMaxLength="20"
-
+        android:layout_row="0"
+        android:layout_columnSpan="3"
         android:layout_height="wrap_content"
         android:id="@+id/view">
 
@@ -25,18 +27,6 @@
             android:layout_height="wrap_content"
             android:hint="What did you do today?"/>
     </android.support.design.widget.TextInputLayout>
-
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Save Entry"
-        android:id="@+id/save_entry_button"
-        android:onClick="saveEntry"
-        style="@style/Widget.AppCompat.Button.Colored"
-        android:layout_below="@+id/view"
-        android:layout_alignParentEnd="true" />
-
-
     <Switch
         style="@style/Base.Widget.AppCompat.CompoundButton.Switch"
         android:switchMinWidth="60dp"
@@ -45,21 +35,29 @@
         android:layout_height="wrap_content"
         android:id="@+id/privacy_switch"
         android:checked="false"
-        android:layout_alignBaseline="@+id/shared_boolean_text"
-        android:layout_alignBottom="@+id/shared_boolean_text"
-        android:layout_toEndOf="@+id/shared_boolean_text"
+        android:layout_row="1"
+        android:layout_column="1"
+
         android:layout_marginStart="40dp" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceSmall"
-        android:text="P"
+        android:layout_row="1"
+        android:text="YAYA"
+        android:layout_column="0"
         android:id="@+id/shared_boolean_text"
-        android:layout_marginStart="30dp"
-        android:layout_alignBaseline="@+id/save_entry_button"
-        android:layout_alignBottom="@+id/save_entry_button"
-        android:layout_alignParentStart="true" />
+        android:layout_marginStart="30dp" />
 
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Save Entry"
+        android:id="@+id/save_entry_button"
+        android:onClick="saveEntry"
+        style="@style/Widget.AppCompat.Button.Colored"
+        android:layout_row="1"
+        android:layout_column="2"/>
+</GridLayout>
 
-</RelativeLayout>
