--- a/DailyJournal/app/src/main/res/layout/activity_search_friends.xml
+++ b/DailyJournal/app/src/main/res/layout/activity_search_friends.xml
@@ -3,11 +3,34 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context=".SearchFriendsActivity">
+
+
+            <android.support.design.widget.TextInputEditText
+                android:layout_width="match_parent"
+                android:text="ASDKFKLJJLAKD"
+                android:id="@+id/search_input_edittext"
+                android:layout_height="48dp"
+
+                android:layout_alignTop="@+id/start_search_button"
+                android:layout_toStartOf="@+id/start_search_button" />
+
+
+        <ImageButton
+
+            style="@style/Widget.AppCompat.Button"
+            android:layout_width="36dp"
+            android:layout_height="36dp"
+            android:src="@drawable/ic_search_black_24dp"
+            android:id="@+id/start_search_button"
+            android:onClick="StartSearch"
+            android:layout_alignParentTop="true"
+            android:layout_alignEnd="@+id/search_result_listView" />
 
     <ListView
         android:layout_width="match_parent"
@@ -17,20 +40,7 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="90dp" />
 
-    <EditText
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/search_input_edittext"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentStart="true" />
 
-    <Button
-        style="?android:attr/buttonStyleSmall"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Search"
-        android:id="@+id/start_search_button"
-        android:onClick="StartSearch"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentEnd="true" />
+
+
 </RelativeLayout>
