--- a/DailyJournal/app/src/main/res/layout/pending_friend.xml
+++ b/DailyJournal/app/src/main/res/layout/pending_friend.xml
@@ -1,17 +1,42 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="horizontal" android:layout_width="match_parent"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:orientation="horizontal"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
     android:layout_height="60dp">
+    <de.hdodenhof.circleimageview.CircleImageView
+        app:civ_border_color="#FF000000"
+        app:civ_border_width="2dp"
+        android:layout_width="36dp"
+        android:layout_height="36dp"
+        android:id="@+id/friend_dp"
+        android:src="@drawable/ic_account_circle_black_24dp"
+        android:layout_centerVertical="true"
+        android:layout_alignParentStart="true" />
     <TextView
         android:layout_width="wrap_content"
         android:id="@+id/pending_friend_id"
-        android:layout_height="20dp" />
+        android:layout_height="20dp"
+        android:layout_centerVertical="true"
+        android:layout_toEndOf="@+id/friend_dp"
+        android:layout_marginStart="40dp" />
 
-    <Button
-        android:visibility="visible"
-        style="?android:attr/buttonStyleSmall"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Accept"
-        android:id="@+id/accept_request" />
-</LinearLayout>
+    <ImageButton
+        style="@style/Widget.AppCompat.Button"
+        android:layout_width="36dp"
+        android:layout_height="36dp"
+        android:src="@drawable/ic_done_black_24dp"
+        android:id="@+id/accept_request"
+        android:layout_centerVertical="true"
+        android:layout_toStartOf="@+id/reject_request" />
+
+    <ImageButton
+        style="@style/Widget.AppCompat.Button"
+        android:layout_width="36dp"
+        android:layout_height="36dp"
+        android:src="@drawable/ic_clear_black_24dp"
+        android:id="@+id/reject_request"
+        android:layout_centerVertical="true"
+        android:layout_alignParentEnd="true" />
+
+</RelativeLayout>
