--- a/DailyJournal/app/src/main/res/layout/new_entry_widget.xml
+++ b/DailyJournal/app/src/main/res/layout/new_entry_widget.xml
@@ -5,18 +5,15 @@
     android:id="@+id/widget"
     android:padding="@dimen/widget_margin">
 
-    <TextView
-        android:id="@+id/appwidget_text"
+    <ImageButton
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
         android:layout_margin="8dp"
-        android:background="#09C"
-        android:contentDescription="@string/appwidget_text"
-        android:text="@string/appwidget_text"
-        android:textColor="#ffffff"
-        android:textSize="24sp"
-        android:textStyle="bold|italic" />
+        android:src="@drawable/ic_create_black_24dp"
+        />
+
+
 
 </RelativeLayout>
