--- a/DailyJournal/app/src/main/res/layout/activity_search_friends.xml
+++ b/DailyJournal/app/src/main/res/layout/activity_search_friends.xml
@@ -3,21 +3,19 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context=".SearchFriendsActivity">
 
-
     <android.support.design.widget.TextInputEditText
+        android:contentDescription="@string/con_d_search"
         android:layout_width="match_parent"
         android:id="@+id/search_input_edittext"
         android:layout_height="48dp"
         android:layout_alignTop="@+id/start_search_button"
         android:layout_toStartOf="@+id/start_search_button" />
-
 
     <ImageButton
         style="@style/Widget.AppCompat.Button"
@@ -25,7 +23,7 @@
         android:layout_height="36dp"
         android:src="@drawable/ic_search_black_24dp"
         android:id="@+id/start_search_button"
-        android:onClick="StartSearch"
+        android:contentDescription="@string/con_d_search"
         android:layout_alignParentTop="true"
         android:layout_alignEnd="@+id/search_result_listView" />
 
@@ -46,15 +44,13 @@
         android:layout_centerVertical="true"
         android:layout_centerHorizontal="true"/>
 
-
-
-
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:paddingStart="16dp"
         android:paddingEnd="16dp"
         android:visibility="gone"
+        android:contentDescription="@string/search_no_results_found"
         android:id="@+id/empty_list_textview"
         android:layout_below="@+id/search_input_edittext"
         android:layout_centerHorizontal="true" />
