--- a/DailyJournal/app/src/main/res/layout/activity_sign_in.xml
+++ b/DailyJournal/app/src/main/res/layout/activity_sign_in.xml
@@ -18,13 +18,15 @@
         android:textStyle="bold"
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="40dp"
-        android:text="Sign In"/>
+        android:text="@string/activity_sign_in"
+        android:contentDescription="@string/activity_sign_in"/>
 
     <com.google.android.gms.common.SignInButton
         android:id="@+id/sign_in_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
+        android:contentDescription="@string/con_d_google_sign_in"
         android:visibility="visible"
         android:layout_gravity="center"/>
 </FrameLayout>
