--- a/DailyJournal/app/src/main/res/layout/activity_view_friends.xml
+++ b/DailyJournal/app/src/main/res/layout/activity_view_friends.xml
@@ -9,12 +9,10 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="io.github.rahulhp.dailyjournal.ViewFriendsActivity">
 
-
     <ListView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/friend_list"
         android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        />
+        android:layout_centerHorizontal="true" />
 </LinearLayout>
