Pre-submit commit

--- a/DailyJournal/app/src/main/res/layout/activity_new_entry.xml
+++ b/DailyJournal/app/src/main/res/layout/activity_new_entry.xml
@@ -5,8 +5,8 @@
     android:columnCount="3"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
+    android:paddingEnd="@dimen/activity_horizontal_margin"
+    android:paddingStart="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context=".NewEntryActivity"
     xmlns:tools="http://schemas.android.com/tools"
